--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -3,5 +3,5 @@
 body {
     margin: 0;
     font-family: 'Roboto Mono', sans-serif;
-    background-color: lightblue;
+    background-color: gray;
 }
